--- a/FinalProject/final.ipynb
+++ b/FinalProject/final.ipynb
@@ -2620,7 +2620,7 @@
     "\n",
     "Star-retention rate proved to have a correlation with win percentage. As shown with the linear regressions, the strongest correlation was with 5-star recruits although there was a weaker but still present correlation with 4+ star recruits and winning percentage. There was not a significant correlation with 3+ star recruits and winning percentage, and was in fact slightly negative. This indicates that retaining elite talent could be important at maintaining successful football programs.\n",
     "\n",
-    "If I were to make suggestions to the UMD football program on how to recruit based on this analysis, I would suggest to them to focus resources on keeping the elite talent from Maryland from leaving to other schools. While successful recruiting depends on a myriad of factors and obviously isn't just about distance from hometown to colleges, staying near family and home can be an attractive perk of going to local football programs."
+    "If I were to make suggestions to the UMD football program on how to recruit based on this analysis, I would suggest to them to focus resources on keeping the elite talent from Maryland from leaving to other schools. While successful recruiting depends on a myriad of factors and obviously isn't just about distance from hometown to colleges, staying near family and home can be an attractive perk of going to local football programs. Especially because Maryland's retention rate for 4+ star recruits is relatively low despite being in a talent rich region, Maryland may be able to greatly strengthen its program by focusing its efforts on the elite talent in the area."
    ]
   },
   {
@@ -2636,7 +2636,7 @@
    "id": "bcd25b04-4dbf-494a-bcfc-15a90181ce66",
    "metadata": {},
    "source": [
-    "While this analysis revealed some key insights, there are various other factors that could be incorporated into the analysis to better understand football recruiting. For example, one idea could be to include data on how much certain football programs spend on recruiting. The top schools spend multitudes more than some of the schools even compared to schools on the list I used for this analysis. In addition, if more data was available I would study the same topic over a longer timeframe and potentially with more schools. It would also be potentially interesting to use different analsysis techniques than linear regressions, as they reveal more insights."
+    "While this analysis revealed some key insights, there are various other factors that could be incorporated into the analysis to better understand football recruiting. For example, one idea could be to include data on how much certain football programs spend on recruiting. The top schools spend multitudes more than some of the schools even compared to schools on the list I used for this analysis. In addition, if more data was available I would study the same topic over a longer timeframe and potentially with more schools. It would also be potentially interesting to use different analysis techniques than linear regressions, as they reveal more insights."
    ]
   },
   {
